--- a/src/Pages/Layout/menu.module.less
+++ b/src/Pages/Layout/menu.module.less
@@ -10,7 +10,18 @@
     background-color: var(--blue);
   }
 
+  :global(.ant-menu-submenu-vertical.ant-menu-submenu-selected > .ant-menu-submenu-title) {
+    color: var(--blue);
+  }
+
   :global(.ant-menu-submenu-inline.ant-menu-submenu-active) {
+    &:hover {
+      :global(.ant-menu-submenu-title) {
+        color: var(--white);
+      }
+    }
+  }
+  :global(.ant-menu-submenu-vertical.ant-menu-submenu-active) {
     &:hover {
       :global(.ant-menu-submenu-title) {
         color: var(--white);
