--- a/src/assets/style/var.css
+++ b/src/assets/style/var.css
@@ -9,6 +9,7 @@
   --green:#009864;
   --border-radius:8px;
   --table-hover:#F4F6FB;
-  --table-head_gray:#F1F2F5;
+  --table-head_gray:#FAFAFA;
   --modal-content_bg: #fafafa;
+  --content-gray:#eef2f5;
 }
