--- a/src/Components/Table/table.module.less
+++ b/src/Components/Table/table.module.less
@@ -6,4 +6,7 @@
   :global(.ant-table-cell){
     padding: 11px 16px;
   }
+  :global(.ant-table){
+    border-radius: 0 0 var(--border-radius) var(--border-radius);
+  }
 }
