--- a/src/assets/style/var.css
+++ b/src/assets/style/var.css
@@ -1,6 +1,6 @@
 :root{
   --blue:#0385F2;
-  --border-color:#e6e6e6;
+  --border-color:#C5CAD0;
   --gray:#f6f7f9;
   --white: #fff;
   --pink:#FF546A;
