--- a/src/Components/Tabs/index.module.less
+++ b/src/Components/Tabs/index.module.less
@@ -1,7 +1,8 @@
-.work-manage{
-  :global(.ant-tabs-ink-bar.ant-tabs-ink-bar-animated){
+._tabs-box {
+  :global(.ant-tabs-ink-bar.ant-tabs-ink-bar-animated) {
     font-family: "iconfont" !important;
-    &::after{
+
+    &::after {
       position: absolute;
       left: 50%;
       bottom: 10px;
