--- a/src/assets/style/var.css
+++ b/src/assets/style/var.css
@@ -2,14 +2,11 @@
   --blue:#0385F2;
   --border-color:#C5CAD0;
   --gray:#f6f7f9;
+  --gray1:#f7f8fa;
   --white: #fff;
-  --pink:#FF546A;
-  --red:#E0354A;
   --menu-color:#546078;
-  --green:#009864;
   --border-radius:8px;
   --table-hover:#F4F6FB;
   --table-head_gray:#FAFAFA;
-  --modal-content_bg: #fafafa;
   --content-gray:#eef2f5;
 }
