--- a/src/Pages/Personal/index.module.less
+++ b/src/Pages/Personal/index.module.less
@@ -2,7 +2,7 @@
   display: flex;
   font-size: .16rem;
   color: #333;
-  margin-bottom: .3rem;
+  margin-bottom: var(--gap30);
 
   &::before {
     display: inline-block;
