--- a/src/Pages/WorkMange/totoContract/index.module.less
+++ b/src/Pages/WorkMange/totoContract/index.module.less
@@ -1,7 +1,7 @@
 ._reset-form {
-  margin-top: .2rem;
-  padding-inline: .3rem;
-  padding-bottom: .3rem;
+  margin-top: var(--gap20);
+  padding-inline: var(--gap30);
+  padding-bottom: var(--gap30);
 
   :global(.ant-form-item-label >label) {
     &::after {
