--- a/src/assets/style/var.css
+++ b/src/assets/style/var.css
@@ -11,6 +11,8 @@
   --content-gray:#eef2f5;
   --red:#bf0001;
   --green:#03a471;
+  --green1:#e5f6f0;
+  --green2:#01A471;
   --gap10:.1rem;
   --gap14:.14rem;
   --gap15:.15rem;
