--- a/src/assets/style/reset.css
+++ b/src/assets/style/reset.css
@@ -6,6 +6,10 @@
     padding: 0;
   }
 
+  /* *:empty {
+    display: none;
+  } */
+
   /*设置默认字体:手机端的字体最好使用无衬字体*/
   body {
     font-size: 14px;
@@ -288,18 +292,23 @@
     container-type: inline-size;
   }
 }
-.text-\[14px\]{
+
+.text-\[14px\] {
   font-size: .14rem !important;
 }
-.text-\[12px\]{
+
+.text-\[12px\] {
   font-size: .12rem !important;
 }
-.text-\[16px\]{
+
+.text-\[16px\] {
   font-size: .16rem !important;
 }
-.text-\[18px\]{
+
+.text-\[18px\] {
   font-size: .18rem !important;
 }
-.text-\[22px\]{
+
+.text-\[22px\] {
   font-size: .22rem !important;
 }
