--- a/src/assets/style/reset.css
+++ b/src/assets/style/reset.css
@@ -1,5 +1,8 @@
 @charset "utf-8";
-
+@font-face{
+  font-family: "PingFangSC-Regular";
+  src: url('/public/PingFang-SC-Regular.ttf');
+}
 @layer {
   * {
     margin: 0;
@@ -14,8 +17,7 @@
   body {
     font-size: 14px;
     font-style: normal;
-    font-family: "苹方-简", "Microsoft YaHei", "微软雅黑", STXihei, "华文细黑",
-      serif;
+    font-family: "PingFangSC-Regular";
   }
 
   p {
