--- a/src/assets/style/form.less
+++ b/src/assets/style/form.less
@@ -67,3 +67,12 @@
     }
   }
 }
+
+.clear_required {
+  .ant-form-item-required {
+    &::before {
+      content: "" !important;
+      margin-inline-end: 0 !important;
+    }
+  }
+}
