--- a/src/assets/style/table.less
+++ b/src/assets/style/table.less
@@ -2,12 +2,23 @@
   .ant-table-tbody {
     .ant-table-cell {
       padding-block: 11px;
+      padding-top: 11px;
+      padding-bottom: 11px;
     }
 
     .btn {
       height: 32px;
       line-height: 32px;
       white-space: nowrap;
+    }
+  }
+}
+._reset-table__no-btn {
+  .ant-table-tbody {
+    .ant-table-cell {
+      padding-block: 16px;
+      padding-top: 16px;
+      padding-bottom: 16px;
     }
   }
 }
