--- a/src/Components/Table/table.module.less
+++ b/src/Components/Table/table.module.less
@@ -1,5 +1,6 @@
 .table-reset_style {
   width: 100%;
+  height: 100%;
   :global(.ant-table-thead>tr>th) {
     padding: 19px 16px;
     font-size: 16px;
