--- a/src/Components/Table/table.module.less
+++ b/src/Components/Table/table.module.less
@@ -15,6 +15,9 @@
       padding-left: var(--gap30)
     }
   }
+  :global(.ant-table-body){
+    overflow-y: auto !important;
+  }
   :global(.ant-table) {
     border-radius: 0 0 var(--border-radius) var(--border-radius);
   }
