--- a/src/Components/Table/table.module.less
+++ b/src/Components/Table/table.module.less
@@ -1,6 +1,7 @@
 .table-reset_style {
   width: 100%;
   height: 100%;
+
   :global(.ant-table-thead>tr>th) {
     padding: 19px 16px;
     font-size: 16px;
@@ -15,9 +16,20 @@
       padding-left: var(--gap30)
     }
   }
-  :global(.ant-table-body){
+
+  :global(.ant-table-body) {
     overflow-y: auto !important;
+
+    :global(.ant-table-row) {
+      &:last-child {
+        >td {
+          border-bottom: none;
+        }
+      }
+    }
   }
+
+
   :global(.ant-table) {
     border-radius: 0 0 var(--border-radius) var(--border-radius);
   }
