--- a/src/Components/Table/table.module.less
+++ b/src/Components/Table/table.module.less
@@ -21,6 +21,8 @@
     overflow-y: auto !important;
 
     :global(.ant-table-row) {
+      height: 55px;
+      box-sizing: border-box;
       &:last-child {
         >td {
           border-bottom: none;
