--- a/src/Components/Table/table.module.less
+++ b/src/Components/Table/table.module.less
@@ -1,6 +1,7 @@
 .table-reset_style {
   width: 100%;
-  height: 100%;
+  height: var(--table-height);
+  overflow: auto;
 
   :global(.ant-table-thead>tr>th) {
     padding: 19px 16px;
@@ -23,6 +24,7 @@
     :global(.ant-table-row) {
       height: 55px;
       box-sizing: border-box;
+
       &:last-child {
         >td {
           border-bottom: none;
