--- a/src/assets/style/table.less
+++ b/src/assets/style/table.less
@@ -9,6 +9,8 @@
     .btn {
       height: 32px;
       line-height: 32px;
+      padding-top: 0;
+      padding-bottom: 0;
       white-space: nowrap;
     }
   }
