--- a/src/assets/font/iconfont.css
+++ b/src/assets/font/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4319455 */
-  src: url('iconfont.woff2?t=1701164317846') format('woff2'),
-       url('iconfont.woff?t=1701164317846') format('woff'),
-       url('iconfont.ttf?t=1701164317846') format('truetype');
+  src: url('iconfont.woff2?t=1702538757851') format('woff2'),
+       url('iconfont.woff?t=1702538757851') format('woff'),
+       url('iconfont.ttf?t=1702538757851') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.h-icon-initiate:before {
+  content: "\e6af";
 }
 
 .h-icon-delete:before {
